--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,7 +1,12 @@
 .container {
   height: 142vh;
-  /* height: 200vh; */
   width: 100%;
   padding: 0 2rem;
   background-color: #212a3f;
+}
+
+@media screen and (max-width: 600px) {
+  .container{
+    height: 140vh;
+  }
 }
